--- a/OutliersAPP.SPA/src/app/lists/lists.component.html
+++ b/OutliersAPP.SPA/src/app/lists/lists.component.html
@@ -1,23 +1,31 @@
-<div class="container mt-1 c2">
+
+<div class="container-fluid gedf-wrapper">
   <div class="row">
-    <div class="col-md-11 text-center mt-3">
-      <h3 style="font-family:'Droid-Arabic-Kufi';margin-right:145px">{{likeParam === 'Likers' ? 'من أعجبوا بي' : 'من
-        أعجبت بهم'}} : {{pagination.totalItems}}</h3>
+    <div class="col-md-2">              
     </div>
-    <div class="col-md-1 float-left">
-      <div class="btn-group-vertical">
-        <button type="button" [(ngModel)]="likeParam" btnRadio="Likers" (click)="loadUsers();"  class="btn mb-1 ajs-button btn-up"
-          [ngStyle]="{'background':likeParam ==='Likers'?'red' : ''}">أعجبهم</button>
-        <button type="button" [(ngModel)]="likeParam" (click)="loadUsers();" btnRadio="Likees"  class="btn ajs-button btn-down"
-          [ngStyle]="{'background':likeParam ==='Likees'?'red' : ''}">يعجبونني</button>
+    <div class="col-md-10 gedf-main">
+  <div>
+    <h3 style="font-family:'';margin-right:10px">
+      {{likeParam === 'Likers' ? 'Followers' : 'Following'}}  {{pagination.totalItems}}
+    </h3>
+  </div>
+  <div class="d-flex justify-content-center">
+    <div class="col">
+      <div class="btn-group-vertical float-left">
+        <button type="button" [(ngModel)]="likeParam" btnRadio="Likers" (click)="loadUsers();"  class="btn mb-1 mr-10 ajs-button"
+          [ngStyle]="{'background':likeParam ==='Likers'?'red' :''}">Followers</button>
+        <button type="button" [(ngModel)]="likeParam" (click)="loadUsers();" btnRadio="Likees"  class="btn ajs-button "
+          [ngStyle]="{'background':likeParam ==='Likees'?'red' : ''}">Following</button>
       </div>
     </div>
-  </div>
-  <div class="row mt-4 ">
-    <div *ngFor="let user of users" class="col-sm-6 col-md-4 col-lg-4 col-xl-2">
+  
+  <div class="row">
+    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
       <app-member-card [user]="user"></app-member-card>
     </div>
   </div>
+</div>
+
   <div *ngIf="pagination.totalItems>0" class="d-flex justify-content-center">
     <pagination [boundaryLinks]="true" [itemsPerPage]="pagination.itemsPerPage" [totalItems]="pagination.totalItems"
       [(ngModel)]="pagination.currentPage" (pageChanged)="search=true;pageChanged($event);" previousText="&lsaquo;"
@@ -25,3 +33,6 @@
     </pagination>
   </div>
 </div>
+</div>
+</div>
+
