--- a/OutliersAPP.SPA/src/app/members/member-detail/member-detail.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-detail/member-detail.component.html
@@ -6,28 +6,22 @@
           <div class="row content-panel">
             <div class="col-md-4 profile-text mt mb centered">
               <div class="right-divider hidden-sm hidden-xs">
-                <h4>1922</h4>
-                <h6>FOLLOWERS</h6>
-                <h4>290</h4>
+                <h4>{{countfollwers}}</h4>
                 <h6>FOLLOWING</h6>
-                <h4>$ 13,980</h4>
-                <h6>MONTHLY EARNINGS</h6>
+                <h4><span>{{countfollwing}}</span></h4>
+                <h6>FOLLOWERS</h6>
               </div>
             </div>
             <div class="col-md-4 profile-text">
-              <h3>Sam Soffes</h3>
-              <h6>Main Administrator</h6>
-              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC.</p>
+              <h3>{{user.userName}}</h3>
+              <h4>{{user.gender}}</h4>
+              <p>{{user.skills}}</p>
               <br>
-              <p><button class="btn btn-theme"><i class="fa fa-envelope"></i> Send Message</button></p>
             </div>
             <!-- /col-md-4 -->
             <div class="col-md-4 centered">
               <div class="profile-pic">
                 <p><img src="{{photoUrl || 'assets/User.png'}}" class="img-circle"></p>
-                <p>
-                  <button class="btn btn-theme"><i class="fa fa-check"></i> Follow</button>
-                </p>
               </div>
             </div>
             <!-- /col-md-4 -->
@@ -45,186 +39,75 @@
                 <li>
                   <a data-toggle="tab" href="#contact" class="contact-map">Contact</a>
                 </li>
-
+                <li>
+                  <a data-toggle="tab" href="#photo" >Photos</a>
+                </li>
               </ul>
             </div>
-            <!-- /panel-heading -->
             <div class="panel-body">
               <div class="tab-content">
                 <div id="overview" class="tab-pane active">
                   <div class="row">
                     <div class="col-md-6">
-                      <textarea rows="3" class="form-control" placeholder="Whats on your mind?"></textarea>
+                      <!-- <form  #PostForm="ngForm" id="PostForm" (ngSubmit)="createpost()" role="form">
+                      <textarea rows="3" class="form-control" placeholder="Whats on your mind?" name="description" 
+                      [(ngModel)]="post.description"></textarea>
                       <div class="grey-style">
                         <div class="pull-left">
                           <button class="btn btn-sm btn-theme"><i class="fa fa-camera"></i></button>
                           <button class="btn btn-sm btn-theme"><i class="fa fa-map-marker"></i></button>
                         </div>
                         <div class="pull-right">
-                          <button class="btn btn-sm btn-theme03">POST</button>
+                          <button form="PostForm" [disabled]="!PostForm.dirty" type="submit" class="btn btn-sm btn-theme03">POST</button>
                         </div>
                       </div>
-                      <div class="detailed mt">
-                        <h4> Posts </h4>
-                        <div class="container">
-                          <div class="row">
-                              <div class="[ col-xs-12 col-sm-offset-1 col-sm-5 ]">
-                                  <div class="[ panel panel-default ] panel-google-plus">
-                                      <div class="dropdown">
-                                          <span class="dropdown-toggle" type="button" data-toggle="dropdown">
-                                              <span class="[ glyphicon glyphicon-chevron-down ]"></span>
-                                          </span>
-                                          <ul class="dropdown-menu" role="menu">
-                                              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-                                              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                                              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-                                              <li role="presentation" class="divider"></li>
-                                              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-                                          </ul>
-                                      </div>
-                                      <div class="panel-google-plus-tags">
-                                          <ul>
-                                              <li>#Millennials</li>
-                                              <li>#Generation</li>
-                                          </ul>
-                                      </div>
-                                      <div class="panel-heading">
-                                          <img class="[ img-circle pull-left ]" src="https://lh3.googleusercontent.com/-CxXg7_7ylq4/AAAAAAAAAAI/AAAAAAAAAQ8/LhCIKQC5Aq4/s46-c-k-no/photo.jpg" alt="Mouse0270" />
-                                          <h3>Robert McIntosh</h3>
-                                          <h5><span>Shared publicly</span> - <span>Jun 27, 2014</span> </h5>
-                                      </div>
-                                      <div class="panel-body">
-                                          <p>Do people born in 2000 get to choose if they are Generation Y or Generation Z? How do you decide what generation you want to belong to?</p>
-                                      </div>
-                                      <div class="panel-footer">
-                                          <button type="button" class="[ btn btn-default ]">+1</button>
-                                          <button type="button" class="[ btn btn-default ]">
-                                              <span class="[ glyphicon glyphicon-share-alt ]"></span>
-                                          </button>
-                                          <div class="input-placeholder">Add a comment...</div>
-                                      </div>
-                                      <div class="panel-google-plus-comment">
-                                          <img class="img-circle" src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s46" alt="User Image" />
-                                          <div class="panel-google-plus-textarea">
-                                              <textarea rows="4"></textarea>
-                                              <button type="submit" class="[ btn btn-success disabled ]">Post comment</button>
-                                              <button type="reset" class="[ btn btn-default ]">Cancel</button>
-                                          </div>
-                                          <div class="clearfix"></div>
-                                      </div>
-                                  </div>
-                              </div>
-
-
-                          </div>
+                    </form> -->
+                      <div class="detailed postmergi">
+                        <div text-center>
+                          <h4> Posts </h4>
+                        </div>
+                        <app-post-list></app-post-list>
                       </div>
-                        <!-- /recent-activity -->
-                      </div>
-                      <!-- /detailed -->
                     </div>
-                    <!-- /col-md-6 -->
-                    <div class="col-md-6 detailed">
-                      <h4>User Stats</h4>
-                      <div class="row centered mt mb">
-                        <div class="col-sm-4">
-                          <h1><i class="fa fa-money"></i></h1>
-                          <h3>$22,980</h3>
-                          <h6>LIFETIME EARNINGS</h6>
-                        </div>
-                        <div class="col-sm-4">
-                          <h1><i class="fa fa-trophy"></i></h1>
-                          <h3>37</h3>
-                          <h6>COMPLETED TASKS</h6>
-                        </div>
-                        <div class="col-sm-4">
-                          <h1><i class="fa fa-shopping-cart"></i></h1>
-                          <h3>1980</h3>
-                          <h6>ITEMS SOLD</h6>
-                        </div>
-                      </div>
-                      <!-- /row -->
-                      <h4>My Friends</h4>
-                      <div class="row centered mb">
-                        <ul class="my-friends">
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="assets/img/friends/fr-01.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="assets/img/friends/fr-02.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="assets/img/friends/fr-03.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="assets/img/friends/fr-04.jpg"></div>
-                          </li>
-                          <li>
-                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="assets/img/friends/fr-11.jpg"></div>
-                          </li>
-                        </ul>
-                        <div class="row mt">
-                          <div class="col-md-4 col-md-offset-4">
-                            <h6><a href="#">VIEW ALL</a></h6>
-                          </div>
-                        </div>
-                      </div>
-                      <!-- /row -->
-
-                      <!-- /row -->
-                    </div>
-                    <!-- /col-md-6 -->
                   </div>
-                  <!-- /OVERVIEW -->
                 </div>
-                <!-- /tab-pane -->
                 <div id="contact" class="tab-pane">
                   <div class="row">
                     <div class="col-md-6">
                       <div id="map"></div>
                     </div>
-                    <!-- /col-md-6 -->
-                    <div class="col-md-3 detailed">
+                    <div class="col-md-6 detailed">
                       <h4>Location</h4>
-                      <p>{{user.country}}-{{user.city}}</p>
+                      <div class="col-md-8 col-md-offset-2 mt">
+                        <p>
+                          {{user.country}}<br/> {{user.city}}<br/>
+                        </p>
+                        <br>
+                      </div>
                       <h4>Contacts</h4>
                       <div class="col-md-8 col-md-offset-2 mt">
                         <p>
-                          Phone: {{user.phoneNumber}}
+                          Phone:{{user.phoneNumber}}<br/> Cell: {{user.phoneNumber}}<br/>
                         </p>
+                        <br>
                         <p>
-                          Email: hello@dashiotheme.com<br/> Skype: UseDashio<br/> Website: http://Alvarez.is
-                        </p>
-                      </div>
-                      <h4>Itrested Job</h4>
-                      <div class="col-md-8 col-md-offset-2 mt">
-                        <p>
-                           {{user.intrestedjobe}}
-                        </p>
-                      </div>
-                      <h4>Skills</h4>
-                      <div class="col-md-8 col-md-offset-2 mt">
-                        <p>
-                           {{user.skills}}
+                          Email: hello@.com<br/> Skype: UseDashio<br/>
                         </p>
                       </div>
                     </div>
-                    <!-- /col-md-6 -->
                   </div>
-                  <!-- /row -->
                 </div>
+                <div id="photo" class="tab-pane"> 
+                          <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
 
+                </div>
               </div>
-              <!-- /tab-content -->
             </div>
-            <!-- /panel-body -->
           </div>
-          <!-- /col-lg-12 -->
         </div>
-        <!-- /row -->
       </div>
-      <!-- /container -->
     </section>
-    <!-- /wrapper -->
+  </section>
   </section>
 
 
