--- a/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
@@ -1,112 +1,95 @@
+     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script> 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+    
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+            crossorigin="anonymous">
+            
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+            <div class="detailed ">
 
-<div class="card gedf-card">
-  <div class="card-header">
-    <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab"
-          aria-controls="posts" aria-selected="true">Make
-          a publication</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="images-tab" data-toggle="tab" role="tab" aria-controls="images"
-          aria-selected="false" href="#images">Images</a>
-      </li>
-    </ul>
-  </div>
-  <div class="card-body">
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
-        <div class="form-group">
-          <label class="sr-only" for="message">post</label>
-          <textarea class="form-control" id="message" rows="3"
-            placeholder="What are you thinking?"></textarea>
+    
+        <div class="container-fluid gedf-wrapper">
+            <div class="row">
+                <div class="col-md-3">
+                   
+                </div>
+                <div class="col-md-6 gedf-main">
+                    <!--- \\\\\\\Post-->
+                    <form #PostForm="ngForm" id="PostForm" (ngSubmit)="createpost()">
+                    <div class="card gedf-card">
+                      <div class="card-header">
+                          <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
+                              <li class="nav-item">
+                                  <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true">Make
+                                      a publication</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" id="images-tab" data-toggle="tab" role="tab" aria-controls="images" aria-selected="false" href="#images">Images</a>
+                              </li>
+                          </ul>
+                      </div>
+                      <div class="card-body">
+                          <div class="tab-content" id="myTabContent">
+                              <div class="active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+                                  <div class="form-group">
+                                      <label class="sr-only" for="message">post</label>
+                                      <textarea  name="description" [(ngModel)]="newpost.description" class="form-control" id="message" rows="8" placeholder="What are you thinking?"></textarea>
+                                  </div>
+                              </div>
+                              <!-- <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
+                                  <div class="form-group">
+                                      <div class="custom-file">
+                                          <input type="file" class="custom-file-input" id="customFile">
+                                          <label class="custom-file-label" for="customFile">Upload image</label>
+                                      </div>
+                                  </div>
+                                   <div class="py-4"></div>
+                              </div> -->
+                          </div>
+                          <div class="btn-toolbar justify-content-between">
+                              <div class="btn-group">
+                                  <button type="submit" class="btn btn-primary" >share</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                </form>
+                    <app-post-list></app-post-list>
+                    <!-- <app-post-detail></app-post-detail> -->
+                </div>
+                <div class="col-md-3">
+                    <div class="card gedf-card">
+                        <div class="mt-1">
+                            <br>
+                            <br>
+                            <br>
+                            <h1>{{countfollwers}}</h1>
+                           <a [routerLink]="['/lists']"><h3>FOLLOWING</h3></a> 
+                           <br>
+                           <br>
+                            <h1><span>{{countfollwing}}</span></h1>
+                           <a [routerLink]="['/lists']"><h3>FOLLOWERS</h3></a>
+                          </div>
+                    </div>
+                    <div class="card gedf-card">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Some quick example text to build on the card title a
+    nd make up the bulk of the
+                                    card's content.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
-        <div class="form-group">
-          <div class="custom-file">
-            <input type="file" class="custom-file-input" id="customFile">
-            <label class="custom-file-label" for="customFile">Upload image</label>
-          </div>
-        </div>
-        <div class="py-4"></div>
-      </div>
     </div>
-    <div class="btn-toolbar justify-content-between">
-      <div >
-        <button type="submit" class="b1" >share</button>
-      </div>
-      <div class="btn-group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-link dropdown-toggle"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-globe"></i>
-        </button>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="btnGroupDrop1">
-          <a class="dropdown-item" href="#"><i class="fa fa-globe"></i> Public</a>
-          <a class="dropdown-item" href="#"><i class="fa fa-users"></i> Friends</a>
-          <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Just me</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--- \\\\\\\Post-->
-<div class="container">
-  <div class="box image">
-    <div class="box-header">
-      <h3><a href=""><img src="https://goo.gl/oOD0V2" alt="" />Roswell Parian</a>
-      </h3>
-      <span><i class="fa fa-angle-down"></i></span>
-      <div class="window"><span></span></div>
-    </div>
-    <div class="box-content">
-      <div class="content">
-        <img src="https://goo.gl/nvqkEz" alt="" />
-      </div>
-      <div class="bottom">
-        <p>The life is much more interesant, when you remmenber the last time</p>
-        <span><span class="fa fa-search-plus"></span></span>
-
-      </div>
-    </div>
-    <div class="box-likes">
-      <div class="row">
-        <span><a href="#"><img src="https://goo.gl/oM0Y8G" alt="" /></a></span>
-        <span><a href="#"><img src="https://goo.gl/vswgSn" alt="" /></a></span>
-        <span><a href="#"><img src="https://goo.gl/4W27eB" alt="" /></a></span>
-        <span><a href="#">+99</a></span>
-        <span>Like this</span>
-      </div>
-      <div class="row">
-        <span>145 comments</span>
-      </div>
-    </div>
-    <div class="box-buttons">
-      <div class="row">
-        <button><span class="fa fa-thumbs-up"></span></button>
-        <button><span class="fa fa-comment"></span></button>
-      </div>
-    </div>
-    <div class="box-click"><span><i class="ion-chatbox-working"></i> View 140 more comments</span></div>
-    <div class="box-comments">
-      <div class="comment"><img src="https://goo.gl/oM0Y8G" alt="" />
-        <div class="content">
-          <h3><a href="">Emily Rudd</a><span><time> 1 hr - </time><a href="#">Like</a></span></h3>
-          <p>Wow irealy, i love here. Nice pic</p>
-        </div>
-      </div>
-    </div>
-    <div class="box-new-comment">
-      <img src="https://goo.gl/oOD0V2" alt="" />
-      <div class="content">
-        <div class="row">
-          <textarea placeholder="write a comment..."></textarea>
-        </div>
-        <div class="row">
-          <span class="ion-android-attach"></span>
-          <span class="fa fa-smile-o"></span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
