--- a/OutliersAPP.SPA/src/app/post/post-list/post-list.component.html
+++ b/OutliersAPP.SPA/src/app/post/post-list/post-list.component.html
@@ -1,6 +1,7 @@
-<div class="detailed mt">
+<div class="">
     <div *ngFor="let post of posts">
-      <br>
+
+      <br><br><br><br><br><br>
       <app-post-card [post]='post'></app-post-card>
       <!-- <div *ngFor="let comment of comments">
           <app-comment-card [comment]='comment'></app-comment-card>
