--- a/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-home/member-home.component.html
@@ -1,95 +1,118 @@
-     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script> 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-    
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-            crossorigin="anonymous">
-            
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
-            <div class="detailed ">
-
-    
-        <div class="container-fluid gedf-wrapper">
+    <!-- <div class="panel-body">
+        <div class="tab-content">
+          <div id="overview" class="tab-pane active">
+            <!-- <div class="col-md-4">   
+            </div> 
             <div class="row">
-                <div class="col-md-3">
-                   
-                </div>
-                <div class="col-md-6 gedf-main">
-                    <!--- \\\\\\\Post-->
-                    <form #PostForm="ngForm" id="PostForm" (ngSubmit)="createpost()">
-                    <div class="card gedf-card">
-                      <div class="card-header">
-                          <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
-                              <li class="nav-item">
-                                  <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true">Make
-                                      a publication</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" id="images-tab" data-toggle="tab" role="tab" aria-controls="images" aria-selected="false" href="#images">Images</a>
-                              </li>
-                          </ul>
-                      </div>
-                      <div class="card-body">
-                          <div class="tab-content" id="myTabContent">
-                              <div class="active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
-                                  <div class="form-group">
-                                      <label class="sr-only" for="message">post</label>
-                                      <textarea  name="description" [(ngModel)]="newpost.description" class="form-control" id="message" rows="8" placeholder="What are you thinking?"></textarea>
-                                  </div>
-                              </div>
-                              <!-- <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
-                                  <div class="form-group">
-                                      <div class="custom-file">
-                                          <input type="file" class="custom-file-input" id="customFile">
-                                          <label class="custom-file-label" for="customFile">Upload image</label>
-                                      </div>
-                                  </div>
-                                   <div class="py-4"></div>
-                              </div> -->
-                          </div>
-                          <div class="btn-toolbar justify-content-between">
-                              <div class="btn-group">
-                                  <button type="submit" class="btn btn-primary" >share</button>
-                              </div>
-                          </div>
-                      </div>
+                <div class="col-md-4">    
+                 </div>
+              <div class="col-md-4">
+                <form #PostForm="ngForm" (ngSubmit)="createpost();">
+                <textarea rows="5" name="description" [(ngModel)]="newpost.description" class="form-control" placeholder="Whats on your mind?"></textarea>
+                <div class="grey-style">
+                  <div class="pull-left">
+                    <button class="btn btn-sm btn-theme"><i class="fa fa-camera"></i></button>
+                    <button class="btn btn-sm btn-theme"><i class="fa fa-map-marker"></i></button>
                   </div>
+                  <div class="pull-right">
+                    <button class="btn btn-sm btn-theme03" formaction="PostForm">POST</button>
+                  </div>
+                </div>
                 </form>
-                    <app-post-list></app-post-list>
-                    <!-- <app-post-detail></app-post-detail> -->
-                </div>
-                <div class="col-md-3">
-                    <div class="card gedf-card">
-                        <div class="mt-1">
-                            <br>
-                            <br>
-                            <br>
-                            <h1>{{countfollwers}}</h1>
-                           <a [routerLink]="['/lists']"><h3>FOLLOWING</h3></a> 
-                           <br>
-                           <br>
-                            <h1><span>{{countfollwing}}</span></h1>
-                           <a [routerLink]="['/lists']"><h3>FOLLOWERS</h3></a>
-                          </div>
-                    </div>
-                    <div class="card gedf-card">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title a
-    nd make up the bulk of the
-                                    card's content.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
+                  <br>  
+                  <app-post-list></app-post-list> 
+              </div>
+
+              <!-- <div class="card">
+                <div #panel class="card-body">
+                    <ul class="chat">
+                        <li >
+                      
+                            <div *>
+              
+              
+              
                             </div>
-                        </div>
+              
+              
+                           
+                            <div >
+              
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+              </div> 
+              <div class="col-md-2">    
+              </div>
+              <div class="col-md-2">
+                <div class="card gedf-card">
+                    <div class="">
+                        <h1>{{countfollwers}}</h1>
+                       <a [routerLink]="['/lists']"><h3>FOLLOWING</h3></a> 
+                       <br>
+                       <br>
+                        <h1><span>{{countfollwing}}</span></h1>
+                       <a [routerLink]="['/lists']"><h3>FOLLOWERS</h3></a>
+                      </div>
+                </div>
+                <div class="card gedf-card">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title a
+nd make up the bulk of the
+                                card's content.</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
             </div>
-        </div>
-    </div>
+
+ </div>
+
+ <div class="mtorgih">
+
+</div>
+ </div>
+ </div> 
+</div> -->
+<div class="detailed ">  
+  <div class="container-fluid gedf-wrapper">
+      <div class="row">
+          <div class="col-md-4">
+             
+          </div>
+          <div class="col-md-4 gedf-main">
+              <!--- \\\\\\\Post-->
+
+                <form #PostForm="ngForm" (ngSubmit)="createpost();">
+                <textarea rows="5" name="description" [(ngModel)]="newpost.description" class="form-control" placeholder="Whats on your mind?"></textarea>
+                <div class="grey-style">
+                  <div class="pull-left">
+                    <button class="btn btn-sm btn-theme"><i class="fa fa-camera"></i></button>
+                    <button class="btn btn-sm btn-theme"><i class="fa fa-map-marker"></i></button>
+                  </div>
+                  <div class="pull-right">
+                    <button   class="btn btn-sm btn-theme03" formaction="PostForm">POST</button>
+                  </div>
+                </div>
+                </form>
+              <app-post-list></app-post-list>
+          </div>
+
+          <div class="app_page1 ds">
+            <div class="row">
+                <div class="col-sm-1" id="right">
+                  <h4 class="centered mt">TEAM MEMBERS ONLINE</h4>
+                  <app-member-followinglist></app-member-followinglist>
+
+                </div>
+                </div>
+                </div>
+
+      </div>
+  </div>
+</div>
+
+
