--- a/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-profile/member-profile.component.html
@@ -40,7 +40,7 @@
                   <a data-toggle="tab" href="#contact" class="contact-map">Contact</a>
                 </li>
                 <li>
-                  <a data-toggle="tab"  [routerLink]="['/member/edit']">Edit Profile</a>
+                  <a data-toggle="tab" [routerLink]="['/member/edit']">Edit Profile</a>
                 </li>
               </ul>
             </div>
@@ -48,26 +48,145 @@
               <div class="tab-content">
                 <div id="overview" class="tab-pane active">
                   <div class="row">
-                    <div class="col-md-12">
-                      
+                    <div class="col-md-6">
                       <div class="detailed postmergi">
                         <div text-center>
                           <h4> Posts </h4>
                         </div>
-                        <app-post-list></app-post-list>
                       </div>
+                      <div class="col-md-12">
+                        <!-- <div class="[ panel panel-default ] panel-google-plus"> -->
+                    <app-post-list></app-post-list>
+
+                  </div>
+                  <!-- </div> -->
+                    </div>
+
+                     
+
+                    <div class="col-md-6 detailed">
+                      <h4>User Stats</h4>
+                      <div class="row centered mt mb">
+                        <div class="col-sm-4">
+                          <h1><i class="fa fa-money"></i></h1>
+                          <h3>$22,980</h3>
+                          <h6>LIFETIME EARNINGS</h6>
+                        </div>
+                        <div class="col-sm-4">
+                          <h1><i class="fa fa-trophy"></i></h1>
+                          <h3>37</h3>
+                          <h6>COMPLETED TASKS</h6>
+                        </div>
+                        <div class="col-sm-4">
+                          <h1><i class="fa fa-shopping-cart"></i></h1>
+                          <h3>1980</h3>
+                          <h6>ITEMS SOLD</h6>
+                        </div>
+                      </div>
+                      <!-- /row -->
+                      <h4>My Friends</h4>
+                      <div class="row centered mb">
+                        <ul class="my-friends">
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-01.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-02.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-03.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-04.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-05.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-06.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-07.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-08.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-09.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-10.jpg"></div>
+                          </li>
+                          <li>
+                            <div class="friends-pic"><img class="img-circle" width="35" height="35" src="img/friends/fr-11.jpg"></div>
+                          </li>
+                        </ul>
+                        <div class="row mt">
+                          <div class="col-md-4 col-md-offset-4">
+                            <h6><a href="#">VIEW ALL</a></h6>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /row -->
+                      <h4>Pending Tasks</h4>
+                      <div class="row centered">
+                        <div class="col-md-8 col-md-offset-2">
+                          <h5>Dashboard Update (40%)</h5>
+                          <div class="progress">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                              <span class="sr-only">40% Complete (success)</span>
+                            </div>
+                          </div>
+                          <h5>Unanswered Messages (80%)</h5>
+                          <div class="progress">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                              <span class="sr-only">80% Complete (success)</span>
+                            </div>
+                          </div>
+                          <h5>Product Review (60%)</h5>
+                          <div class="progress">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                              <span class="sr-only">60% Complete (success)</span>
+                            </div>
+                          </div>
+                          <h5>Friend Requests (90%)</h5>
+                          <div class="progress">
+                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                              <span class="sr-only">90% Complete (success)</span>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- /col-md-8 -->
+                      </div>
+                      <!-- /row -->
                     </div>
                   </div>
                 </div>
+                
                 <div id="contact" class="tab-pane">
                   <div class="row">
-                    <div class="col-md-12 detailed">
+                    <div class="col-md-6">
+                      <div class="detailed postmergi">
+                        <div text-center>
+                          <h4> Posts </h4>
+                        </div>
+                      </div>
+                      <div class="col-md-12">
+                    <app-post-list></app-post-list>
+
+                  </div>
+                    </div>
+
+                    <div class="col-md-6 detailed">
                       <h4>Location</h4>
+                      <div class="col-md-8 col-md-offset-2 mt">
                         <p>
                           {{user.country}}<br/> {{user.city}}<br/>
                         </p>
                         <br>
+                      </div>
                       <h4>Contacts</h4>
+                      <div class="col-md-8 col-md-offset-2 mt">
                         <p>
                           Phone:{{user.phoneNumber}}<br/> Cell: {{user.phoneNumber}}<br/>
                         </p>
@@ -76,15 +195,17 @@
                           Email: hello@.com<br/> Skype: UseDashio<br/>
                         </p>
                       </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+                    </div>
+                
       </div>
-    </section>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
   </section>
+    </section>
   </section>
 
 
