--- a/OutliersAPP.SPA/src/app/post/comment-card/comment-card.component.html
+++ b/OutliersAPP.SPA/src/app/post/comment-card/comment-card.component.html
@@ -1,48 +1,32 @@
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<div class="comment-tabs">
+          
+    <div class="tab-content">
+        <div class="tab-pane active" id="comments-logout">                
+            <ul class="media-list">
+              <li class="media">
+                <a class="pull-left" href="#">
+                  <img class="img-circle" src="{{comment.userPhotoUrl}}" width="125px" height="125px" alt="profile">
+                </a>
+                <div class="media-body">
+                  <div class="well well-lg">
+                      <h4 class="media-heading text-uppercase reviews">{{comment.userKnownAs}}</h4>
+                      <ul class="media-date text-uppercase reviews list-inline">
+                        <li class="dd">22</li>
+                        <li class="mm">09</li>
+                        <li class="aaaa">2014</li>
+                      </ul>
+                      <p class="media-comment">
+                        Great snippet! Thanks for sharing.
+                        Great snippet! Thanks for sharing.Great snippet! Thanks for sharing.Great snippet! Thanks for sharing.Great snippet! Thanks for sharing.{{comment.description}}
+                      </p>
+                      <a class="btn btn-info btn-circle text-uppercase" href="#" id="reply"><span class="glyphicon glyphicon-share-alt"></span> Reply</a>
+                      <a class="btn btn-warning btn-circle text-uppercase" data-toggle="collapse" href="#replyOne"><span class="glyphicon glyphicon-comment"></span> 2 comments</a>
+                  </div>              
+                </div>
+    
+              </li>          
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="panel panel-default widget">
 
-            <div class="panel-body">
-                <ul class="list-group">
-                    <li class="">
-                        <div class="row">
-                            <div>
-                                <div class="dropdown">
-                                    <button class="btn btn-link dropdown-toggle" type="button" id="gedf-drop1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fa fa-ellipsis-h"></i>
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="gedf-drop1">
-                                        <div class="h6 dropdown-header">Configuration</div>
-                                        <a class="dropdown-item" href="#">Update</a>
-                                        <a class="dropdown-item"  (click)="deletecomment(authservice.decodedToken.nameid,comment.id,comment.postId)">Delete</a>
-                                        <a class="dropdown-item" href="#">Report</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-2 col-md-1">
-                                <img src="{{comment.userPhotoUrl}}" class="img-circle img-responsive" alt="" /></div>
-                            <div class="col-xs-10 col-md-11">
-                                <div>
-                                    <a href="http://www.jquery2dotnet.com/2013/10/google-style-login-page-desing-usign.html">
-                                        Google Style Login Page Design Using Bootstrap</a>
-                                    <div class="mic-info">
-                                        By: <a href="#">{{comment.userKnownAs}}</a> {{comment.commentTime}}
-                                    </div>
-                                </div>
-                                <div class="comment-text">
-                                   {{comment.description}}
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-                <!-- <a href="#" class="btn btn-primary btn-sm btn-block" role="button"><span class="glyphicon glyphicon-refresh"></span> More</a> -->
-            </div>
+            </ul> 
         </div>
     </div>
-</div>
