--- a/OutliersAPP.SPA/src/app/post/post-card/post-card.component.html
+++ b/OutliersAPP.SPA/src/app/post/post-card/post-card.component.html
@@ -1,58 +1,48 @@
-<div class="card gedf-card">
-    <div class="card-header">
-        <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="mr-2">
-                    <img class="rounded-circle" width="45" src="{{post.userPhotoUrl|| 'assets/User.png'}}" alt="">
-                </div>
-                <div class="ml-2">
-                    <div class="h7 text-muted">{{post.userKnownAs}}</div>
-                </div>
-            </div>
-            <div>
-                <div class="dropdown">
-                    <button class="btn btn-link dropdown-toggle" type="button" id="gedf-drop1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-ellipsis-h"></i>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="gedf-drop1">
-                        <div class="h6 dropdown-header">Configuration</div>
-                        <a class="dropdown-item" href="#">Update</a>
-                        <a class="dropdown-item" (click)="deletepost(post.id);">Delete</a>
-                        <a class="dropdown-item" href="#">Report</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-    </div>
-    <div class="card-body">
-        <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>{{post.posttime}}</div>
-        <p class="card-text">
-            <!-- [routerLink]="['/members/',user.id]" -->
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo recusandae nulla rem eos ipsa praesentium esse magnam nemo dolor
-            sequi fuga quia quaerat cum, obcaecati hic, molestias minima iste voluptates,{{post.description}}.
-        </p>
-    </div>
-    <div class="card-footer">
-        <a href="#" class="card-link"><i class="fa fa-gittip"></i> Like</a>
-        <a [routerLink]="['/member/post/comment/',post.id]"  class="card-link"><i class="fa fa-comment"></i> Comment</a>
-    </div>
-    <div class="postcomment" *ngIf="showinput">
-        <div class="row">
-            <div class="col-md-2">
-                <img src="{{post.userPhotoUrl|| 'assets/User.png'}}" alt="">
-            </div>
-            <div class="col-md-8" >
-                <form #postForm="ngForm" (ngSubmit)="sendComment();">
-                    <div class="form-group">
-                        <input required  type="text" name="description" [(ngModel)]="newComment.description" class="form-control" id="inputPassword" placeholder="Post a comment">
+              <div class="card gedf-card"> 
+                <div class="[ panel panel-default ] panel-google-plus">
+                  <div class="dropdown">
+                      <span class="dropdown-toggle" type="button" data-toggle="dropdown">
+                          <span class="[ glyphicon glyphicon-chevron-down ]"></span>
+                      </span>
+                      <ul class="dropdown-menu" role="menu">
+                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Update</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Report</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" (click)="deletepost(post.id)">Delete</a></li>
+                          <li role="presentation" class="divider"></li>
+                      </ul>
+                  </div>
+                  <div class="panel-google-plus-tags">
+                      <ul>
+                          <li>#Millennials</li>
+                          <li>#Generation</li>
+                      </ul>
+                  </div>
+                  <div class="panel-heading">
+                      <img class="img-circle mrphoto" width="65" src="{{post.userPhotoUrl}}" alt="Mouse0270" />
+                      <div class="mtpragr">
+                      <h3>{{post.userKnownAs}}</h3>
+                      <h5><span>Shared publicly</span> - <span>{{post.posttime}}</span> </h5>
                     </div>
-                    <div class="input-group-append">
-                        <button [disabled]="!postForm.dirty" class="btn btn-primary ml-1">send</button>
-                    </div>
-                </form>
-            </div>
-            
-        </div>
-    </div>
-</div>
+                  </div>
+                  <div class="panel-body ">
+                      <p>Do people born in 2000 get to choose if they are Generation Y or Generation Z? How do you decide what
+                        Do people born in 2000 get to choose if they are Generation Y or Generation Z? How do you decide what
+                        Do people born in 2000 get to choose if they are Generation Y or Generation Z? How do you decide what
+                        Do people born in 2000 get to choose if they are Generation Y or Generation Z? How do you decide what generation you want to belong to?{{post.description}}</p>
+                  </div>
+                  <form #postForm="ngForm" (ngSubmit)="sendComment();">
+                  <div class="panel-footer">
+                    <input type="text" class="form-control" [(ngModel)]="newComment.description" id="exampleInputText" name="description"
+                    placeholder="Write Your Comment">
+                    <br>
+                      <button type="button" class="[ btn btn-default ]" [routerLink]="['/member/post/comment/',post.id]" >+1</button>
+                      <button    type="submit" class="[ btn btn-default ]">
+                          <span class="[ glyphicon glyphicon-share-alt ]"></span>
+                      </button>
+                      <!-- <input class="input-placeholder">Add a comment...--> 
+                  </div>
+                </form >
+
+              </div>
+          </div>
