--- a/OutliersAPP.SPA/src/app/members/member-followingcard/member-followingcard.component.html
+++ b/OutliersAPP.SPA/src/app/members/member-followingcard/member-followingcard.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="details">
     
-      <h5 href="#">{{following.userName}}</h5><br/>
+    <strong>  <h5 href="#">{{following.userName}}</h5><br/></strong>
       <!-- <muted>Available</!-->
         <!-- <a>{{following.lastActive}}</a> -->
    
