--- a/OutliersAPP.SPA/src/app/members/member-followingcard/member-followingcard.component.css
+++ b/OutliersAPP.SPA/src/app/members/member-followingcard/member-followingcard.component.css
@@ -18,7 +18,7 @@ p a:hover {
 }
 
 .details{
-    color:white ;
+    color:#797979 ;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
